@@ -117,6 +117,22 @@ public class JdbcServiceImpl implements JdbcService {
     }
 
     @Override
+    public List<Long> datasourceServiceIds() throws Exception {
+        List<Long> datasources = new ArrayList<>();
+
+        ServiceReference<?>[] references = bundleContext.getServiceReferences((String) null,
+                "(|(" + Constants.OBJECTCLASS + "=" + DataSource.class.getName() + ")("
+                        + Constants.OBJECTCLASS + "=" + XADataSource.class.getName() + "))");
+        if (references != null) {
+            for (ServiceReference reference : references) {
+                datasources.add((Long) reference.getProperty(Constants.SERVICE_ID));
+            }
+        }
+
+        return datasources;
+    }
+
+    @Override
     public Map<String, List<String>> query(String datasource, String query) throws Exception {
         try (JdbcConnector jdbcConnector = new JdbcConnector(bundleContext, lookupDataSource(datasource))) {
             Map<String, List<String>> map = new HashMap<>();
@@ -163,9 +179,21 @@ public class JdbcServiceImpl implements JdbcService {
 
     @Override
     public Map<String, String> info(String datasource) throws Exception {
-        try (JdbcConnector jdbcConnector = new JdbcConnector(bundleContext, lookupDataSource(datasource))) {
+        ServiceReference<?> reference = lookupDataSource(datasource);
+        String dsName = datasource;
+        if (reference.getProperty("osgi.jndi.service.name") != null) {
+            dsName = (String) reference.getProperty("osgi.jndi.service.name");
+        } else if (reference.getProperty("datasource") != null) {
+            dsName = (String) reference.getProperty("datasource");
+        } else if (reference.getProperty("name") != null) {
+            dsName = (String) reference.getProperty("name");
+        }
+
+        try (JdbcConnector jdbcConnector = new JdbcConnector(bundleContext, reference)) {
             DatabaseMetaData dbMetaData = jdbcConnector.connect().getMetaData();
             Map<String, String> map = new HashMap<>();
+            map.put("name", dsName);
+            map.put("service.id", reference.getProperty(Constants.SERVICE_ID).toString());
             map.put("db.product", dbMetaData.getDatabaseProductName());
             map.put("db.version", dbMetaData.getDatabaseProductVersion());
             map.put("url", dbMetaData.getURL());
@@ -204,7 +232,7 @@ public class JdbcServiceImpl implements JdbcService {
     private int getRank(ServiceReference<?> reference) {
         Object rankObj = reference.getProperty(Constants.SERVICE_RANKING);
         // If no rank, then spec says it defaults to zero.
-        rankObj = (rankObj == null) ? new Integer(0) : rankObj;
+        rankObj = (rankObj == null) ? Integer.valueOf(0) : rankObj;
         // If rank is not Integer, then spec says it defaults to zero.
         return (rankObj instanceof Integer) ? (Integer) rankObj : 0;
     }
